# R-Teh

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  _config.yml  vcpkg.json
Network/: CMakeLists.txt  TestingClientMain.cpp  TestingServerMain.cpp  network_stress_test.py
Network/include/Server/: UDPServer.hpp
Network/src/Client/: UDPClient.cpp
Network/src/Server/: TCPServer.cpp  UDPServer.cpp
Network/src/Shared/: TCPPacketManager.cpp
PongGame/: CMakeLists.txt  main.cpp
PongGame/include/Game/: PongControls.hpp  PongGame.hpp
PongGame/src/: PongControls.cpp  PongGame.cpp
PongServer/: CMakeLists.txt  main.cpp
PongServer/include/Core/: AssetsManager.hpp  SceneManager.hpp
PongServer/include/PongServer/: PongServer.hpp  PongServerUtils.hpp
PongServer/include/Server/: TCPServer.hpp
PongServer/include/Shared/: Log.hpp  PongServerProtocol.hpp
PongServer/src/PongServer/: PongServerCallback.cpp
RtypeGame/: CMakeLists.txt  main.cpp
RtypeGame/include/Client/: UDPClient.hpp
RtypeGame/include/Game/: Background.hpp  Game.hpp  GameMap.hpp  PlayerUI.hpp
RtypeGame/include/Shared/: RtypeServerProtocol.hpp  TCPPacketManager.hpp
RtypeGame/src/: Controls.cpp
RtypeGame/src/Game/: Background.cpp  GameInit.cpp  GameMap.cpp  GameRun.cpp  GameSignals.cpp  Particles.cpp  PlayerUI.cpp
RtypeGame/src/Launcher/: LaunchGame.cpp
RtypeLauncherGame/: CMakeLists.txt
RtypeLauncherGame/include/Core/: View.hpp
RtypeLauncherGame/include/Server/: TCPServer.hpp
RtypeLauncherGame/include/Shared/: PacketUtils.hpp
RtypeLauncherGame/include/shared/: ANetwork.hpp  Log.hpp
RtypeLauncherGame/src/Launcher/: Launcher.cpp
RtypeLauncherServer/: CMakeLists.txt  main.cpp
RtypeLauncherServer/include/Client/: UDPClient.hpp
RtypeLauncherServer/include/Core/: AssetsManager.hpp
RtypeLauncherServer/include/DynamicLibrary/: DynamicLibrary.hpp
RtypeLauncherServer/src/Client/: TCPClient.cpp
RtypeLauncherServer/src/shared/: TCPPacketManager.cpp
RtypeServer/: CMakeLists.txt  main.cpp
RtypeServer/include/: PlayerUtils.hpp
RtypeServer/include/Core/: SceneManager.hpp  View.hpp
RtypeServer/include/Game/: Background.hpp  GameInstance.hpp  ServerMap.hpp
RtypeServer/include/RtypeServer/: RtypeServer.hpp  RtypeServerUtils.hpp  ServerPlayer.hpp
RtypeServer/include/Server/: UDPServer.hpp
RtypeServer/include/Shared/: GenerateUuid.hpp  RtypeServerProtocol.hpp  RtypeServerProtocol.tpp  ServerConfig.hpp  TCPPacketManager.hpp
RtypeServer/src/Game/: GameInit.cpp  GameInstance.cpp  Particles.cpp  PowerUp.cpp
RtypeServer/src/RtypeServer/: RtypeServer.cpp  RtypeServerRun.cpp  RtypeServerScenes.cpp  RtypeServerUtils.cpp  RtypeSimulation.cpp
RtypeServer/src/ServerMap/: ServerMap.cpp
RtypeServer/src/ServerPlayer/: ServerPlayer.cpp
game_engine/: CMakeLists.txt  Makefile  main.cpp
game_engine/include/: Engine.hpp
game_engine/include/Core/: AssetsManager.hpp  Clock.hpp  ClockEngine.hpp  SceneManager.hpp  View.hpp  Window.hpp
game_engine/include/Scripting/: LuaManager.hpp
game_engine/include/shared/: ANetwork.hpp  INetwork.hpp  PacketManager.hpp  PacketUtils.hpp  TCPPacketManager.hpp  ThreadPool.hpp
game_engine/src/Core/: Clock.cpp  SceneManager.cpp  View.cpp  Window.cpp
game_engine/src/Scripting/: LuaManager.cpp
launcher_server/: CMakeLists.txt  main.cpp
launcher_server/include/Client/: TCPClient.hpp
launcher_server/include/Server/: UDPServer.hpp
launcher_server/src/Server/: UDPServer.cpp
lib_utils/: CMakeLists.txt
lib_utils/LagCompensation/: lag_compensation.md
lib_utils/LagCompensation/include/: testcomposensation.hpp
lib_utils/PeterParser/include/: PlayerUtils.hpp  Test.hpp
lib_utils/PeterParser/src/: PlayerUtils.cpp
network/: CMakeLists.txt  TestingClientMain.cpp  TestingServerMain.cpp  main.cpp  network_stress_test.py  ping.sh
network/include/: ClientExport.hpp  Export.hpp  UDPServer.hpp
network/include/Client/: TCPClient.hpp  UDPClient.hpp
network/include/DynamicLibrary/: DynamicLIbrary.hpp  DynamicLibrary.hpp
network/include/Server/: TCPServer.hpp  UDPServer.hpp
network/include/shared/: ANetwork.hpp  GenerateUuid.hpp  INetwork.hpp  PacketManager.hpp  PacketQueueManager.hpp  PacketUtils.hpp  SendPackets.hpp  TCPPacketManager.hpp  TCPPacketUtils.hpp
network/src/: main.cpp
network/src/Client/: TCPClient.cpp  UDPClient.cpp
network/src/Server/: TCPServer.cpp  UDPServer.cpp
network/src/shared/: ANetwork.cpp  PacketManager.cpp  PacketQueueManager.cpp  TCPPacketManager.cpp  ThreadPool.cpp
pong_server/: CMakeLists.txt  main.cpp
pong_server/Config/: configpath.h.in
pong_server/include/Core/: AssetsManager.hpp  SceneManager.hpp  Window.hpp
pong_server/include/GameInstance/: PongGameInstance.hpp
pong_server/include/PongServer/: PongServer.hpp  PongServerUtils.hpp
pong_server/include/Server/: TCPServer.hpp
pong_server/include/shared/: INetwork.hpp  PongServerProtocol.hpp  TCPPacketManager.hpp  TerminalColors.hpp
pong_server/src/Game/: GameInit.cpp  PowerUp.cpp
pong_server/src/PongGameInstance.cpp/: PongGameInstance.cpp  PongGameInstanceInit.cpp
pong_server/src/PongServer/: PongServer.cpp  PongServerCallback.cpp
rtype_game/: CMakeLists.txt  main.cpp
rtype_game/include/: CollisionHandler.hpp  Controls.hpp  Engine.hpp  EyeBomber.hpp  EyeBoss.hpp  EyeMinion.hpp  Game.hpp  PlayerUtils.hpp
rtype_game/include/Client/: TCPClient.hpp  UDPClient.hpp
rtype_game/include/Core/: AssetsManager.hpp  ClockEngine.hpp  Scene.hpp  (+1 more)
rtype_game/src/: CollisionHandler.cpp  Controls.cpp  EyeBomber.cpp  EyeBoss.cpp  EyeMinion.cpp  Game.cpp  GameLaunch.cpp  Player.cpp  PlayerUtils.cpp
rtype_launcher_game/: CMakeLists.txt  main.cpp
rtype_pong_server/: CMakeLists.txt  main.cpp
rtype_server/: CMakeLists.txt  main.cpp
rtype_server/Config/: server.config
rtype_server/include/: Engine.hpp  RtypeServer.hpp  RtypeServerProtocol.hpp  interpolation.hpp
rtype_server/src/: EyeBomber.cpp  GameInstance.cpp  Player.cpp  RtypeServer.cpp  RtypeServerCallbacks.cpp  RtypeServerRun.cpp  RtypeServerUtils.cpp
(+759 files in other folders)
